--- a/app/src/main/res/layout/hx_activity_recorder.xml
+++ b/app/src/main/res/layout/hx_activity_recorder.xml
@@ -11,7 +11,7 @@
         android:background="@color/top_bar_normal_bg"
         android:gravity="center_vertical" >
 
-        <include layout="@layout/commom_back_btn" />
+        <include layout="@layout/hx_view_commom_back_btn" />
 
         <TextView
             android:layout_width="wrap_content"
