--- a/app/src/main/res/layout/hx_listitem_row_received_video_call.xml
+++ b/app/src/main/res/layout/hx_listitem_row_received_video_call.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/tv_chatcontent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="苏定方"
+                android:text="某人"
                android:padding="6dp"
                 android:minHeight="40dp"
                 android:textSize="15sp"
