--- a/app/src/main/res/values/hx_dimens.xml
+++ b/app/src/main/res/values/hx_dimens.xml
@@ -13,5 +13,6 @@
     <dimen name="sidebar_text_size">10dp</dimen>
      <dimen name="image_thumbnail_size">100dp</dimen>
     <dimen name="image_thumbnail_spacing">1dp</dimen>
-
+	<dimen name = "tab_contacts_height">50dp</dimen>
+	<dimen name = "tab_contacts_text_size">16sp</dimen>
 </resources>
