--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,10 @@
 	<dimen name = "profile_pic_height">48dp</dimen>
 	<dimen name = "list_item_height">72dp</dimen>
 	<dimen name = "list_item_margin_gap">15dp</dimen>
-	<dimen name = "viewpager_tap_height">60dp</dimen>
+	<dimen name = "viewpager_tap_height">55dp</dimen>
 	<dimen name = "view_tap_pic_height">4dp</dimen>
 	<dimen name = "view_tap_pic_width">60dp</dimen>
 	<dimen name = "slide_menu_width">180dp</dimen>
 	<dimen name = "slide_menu_profile_layout_height">180dp</dimen>
+	<dimen name = "navigation_tab_text_size">18sp</dimen>
 </resources >
