--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,17 +67,14 @@
 					android:textColor="@color/tab_home_text"
 					android:textSize="12sp" />
 
-			<TextView
-					android:id="@+id/unread_number"
+			<ImageView
+					android:id="@+id/unread_msg"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_alignParentRight="true"
 					android:layout_marginRight="10dp"
 					android:background="@drawable/unread_count_bg"
 					android:gravity="center"
-					android:text="7"
-					android:textColor="@android:color/white"
-					android:textSize="12sp"
 					android:visibility="invisible" />
 		</RelativeLayout>
 
